TEST-POD-WITH-IMAGE-FROM-ECR/apple.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-apple
  namespace: health-check
  labels:
    app: apple
spec:
  containers:
  - name: nginx
    image: <AWS_ACCOUNT>.dkr.ecr.<AWS_REGION>.amazonaws.com/nginx_test:latest
    volumeMounts:
    - name: html-volume
      mountPath: /usr/share/nginx/html
    imagePullPolicy: IfNotPresent
  imagePullSecrets:
          - name: regcred
  volumes:
  - name: html-volume
    emptyDir: {}
