TEST-POD-WITH-IMAGE-FROM-ECR/apple-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apple-service
  namespace: default
spec:
  selector:
    app: apple
  type: ClusterIP
  ports:
  - name: nginxport
    protocol: TCP
    port: 80
    targetPort: 80
