TEST-POD-WITH-IMAGE-FROM-ECR/banana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banana-service
  namespace: default
spec:
  selector:
    app: banana
  type: ClusterIP
  ports:
  - name: nginxport
    protocol: TCP
    port: 80
    targetPort: 80
